@@ -1,3 +1,8 @@
+2007-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Handle hidden rc file on windows and show a message
+	if saving options fails for any reason.
+
 2007-02-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Add version fetch and display via tooltip.
